[tool.poetry]
name = "repl_python3_browpy"
version = "0.1.0"
description = ""
authors = ["PradhyumR <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
pytest-browser = "^0.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
